@@ -6,18 +6,17 @@ import org.junit.jupiter.api.Tag;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.MethodSource;
-import ru.yandex.practicum.taskmanager.enums.Status;
-import ru.yandex.practicum.taskmanager.enums.Type;
+import org.junit.jupiter.params.provider.NullSource;
 import ru.yandex.practicum.taskmanager.repository.InMemoryMap;
-import ru.yandex.practicum.taskmanager.tasks.Epictask;
-import ru.yandex.practicum.taskmanager.tasks.Selftask;
-import ru.yandex.practicum.taskmanager.tasks.Subtask;
-import ru.yandex.practicum.taskmanager.tasks.Task;
+import ru.yandex.practicum.taskmanager.repository.Repository;
+import ru.yandex.practicum.taskmanager.tasks.*;
+import ru.yandex.practicum.taskmanager.utils.Generator;
+import ru.yandex.practicum.taskmanager.utils.HistoryManager;
 import ru.yandex.practicum.taskmanager.utils.SerialGenerator;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
+import java.util.HashSet;
 import java.util.List;
 import java.util.stream.Stream;
 
@@ -25,68 +24,7 @@ import static org.junit.jupiter.api.Assertions.*;
 import static ru.yandex.practicum.taskmanager.service.Managers.getDefaultHistory;
 
 class RegularTaskManagerTest {
-    static TaskManager taskManager;
-    static ArrayList<Selftask> selfTasks = new ArrayList<>();
-    static ArrayList<Epictask> epicTasks = new ArrayList<>();
-
-    static private void addAddEpicAndSubsToManager() {
-        Epictask epic1 = new Epictask("пойти на рыбалку", "Селигер, в районе оз Волго");
-        epic1 = taskManager.add(epic1);
-        Subtask sub11 = new Subtask("купить удочку", "магазин Охотник, проспект Ленина, 20", epic1.getId());
-        Subtask sub12 = new Subtask("наловить червей", "200 шт.", epic1.getId());
-        Subtask sub13 = new Subtask("купить алкоголь", "батя обещал самогон", epic1.getId());
-        taskManager.add(sub11);
-        taskManager.add(sub12);
-        taskManager.add(sub13);
-
-        Epictask epic2 = new Epictask("жениться", "родители просят внуков");
-        epic2 = taskManager.add(epic2);
-        Subtask sub21 = new Subtask("найти жену", "клуб Фараон", epic2.getId());
-        Subtask sub22 = new Subtask("взять кредит", "Быстроденьги", epic2.getId());
-        Subtask sub23 = new Subtask("сыграть свадьбу", "дядю Лешу не приглашаем", epic2.getId());
-        Subtask sub24 = new Subtask("медовый месяц", "выбрать Турция или Египет", epic2.getId());
-        taskManager.add(sub21);
-        taskManager.add(sub22);
-        taskManager.add(sub23);
-        taskManager.add(sub24);
-
-        Epictask epic3 = new Epictask("отпуск", "отпуск конец августа");
-        taskManager.add(epic3);
-    }
-
-    @BeforeEach
-    public void initTaskManager() {
-        int START_ID_BY_DEFAULT = 1;
-        var tasks = new InMemoryMap<Integer, Task>();
-        var subordinates = new InMemoryMap<Integer, ArrayList<Integer>>();
-        var generator = new SerialGenerator(START_ID_BY_DEFAULT);
-        var history = getDefaultHistory();
-        taskManager = new RegularTaskManager(tasks, subordinates, generator, history);
-
-        Selftask task1 = new Selftask("сходить за продуктами", "купить сыр, молоко, творог");
-        Selftask task2 = new Selftask("выгулять собаку", "пойти вечером погулять в парк");
-        Selftask task3 = new Selftask("скачать сериал", "Игра престолов");
-        Selftask task4 = new Selftask("работать", "работу");
-        Selftask task5 = new Selftask("смотреть на закат", "и на рассвет");
-        selfTasks.addAll(Arrays.asList(task1, task2, task3, task4, task5));
-
-        Epictask epic1 = new Epictask("пойти на рыбалку", "Селигер, в районе оз Волго");
-        Epictask epic2 = new Epictask("жениться", "родители просят внуков");
-        Epictask epic3 = new Epictask("отпуск", "отпуск конец августа");
-        epicTasks.addAll(Arrays.asList(epic1, epic2, epic3));
-    }
-
-    private void addAllSelfTasksToManager() {
-        for (var selfTask : selfTasks) {
-            taskManager.add(selfTask);
-        }
-    }
-
-    private void addAllEpicTasksToManager() {
-        for (var task : epicTasks) {
-            taskManager.add(task);
-        }
-    }
+    TaskManager taskManager;
 
     static Stream<Selftask> getSelfTasks() {
         return Stream.of(
@@ -98,318 +36,339 @@ class RegularTaskManagerTest {
         );
     }
 
-    ;
+    static Stream<Epictask> getEpicTasks() {
+        return Stream.of(
+                new Epictask("пойти на рыбалку", "Селигер, в районе оз Волго"),
+                new Epictask("жениться", "родители просят внуков"),
+                new Epictask("отпуск", "отпуск конец августа")
+        );
+    }
 
-    @DisplayName("добавляем и считываем задачи типа Selftask")
+    @BeforeEach
+    public void initTaskManager() {
+        int START_ID_BY_DEFAULT = 1;
+        Repository<Integer, Task> tasks = new InMemoryMap<>();
+        Repository<Integer, ArrayList<Integer>> subordinates = new InMemoryMap<>();
+        Generator generator = new SerialGenerator(START_ID_BY_DEFAULT);
+        HistoryManager history = getDefaultHistory();
+        taskManager = new RegularTaskManager(tasks, subordinates, generator, history);
+    }
+
+    @DisplayName("add and get Selftasks")
+    @Tag("add")
     @ParameterizedTest
     @MethodSource("getSelfTasks")
     void addAndGetSelfTaskTest(Selftask task) {
         Task addedTask = taskManager.add(task);
         int id = addedTask.getId();
 
+        // проверяем, что метод "add" возвращает корректные таски
         assertAll(
                 () -> assertInstanceOf(Selftask.class, addedTask),
-                () -> assertSame(Type.SELF, addedTask.getType()),
+                () -> assertSame(Subordination.SELF, addedTask.getSubordination()),
                 () -> assertEquals(task.getName(), addedTask.getName()),
                 () -> assertEquals(task.getDescription(), addedTask.getDescription())
         );
         Task gettedTask = taskManager.get(id);
 
+        // проверяем, что в базе сохранены корректные таски, вызывая каждый по id
         assertAll(
                 () -> assertEquals(id, gettedTask.getId()),
                 () -> assertInstanceOf(Selftask.class, gettedTask),
-                () -> assertSame(Type.SELF, gettedTask.getType()),
+                () -> assertSame(Subordination.SELF, gettedTask.getSubordination()),
                 () -> assertEquals(task.getName(), gettedTask.getName()),
                 () -> assertEquals(task.getDescription(), gettedTask.getDescription())
         );
     }
 
-
-    @Test
-    void getAllSelfTaskTheSamePower() {
-        addAllSelfTasksToManager();
-        List<Task> list = taskManager.getAll();
-        assertEquals(list.size(), selfTasks.size());
+    @DisplayName("add null Selftask")
+    @Tag("add")
+    @ParameterizedTest
+    @NullSource
+    void addNullSelfTaskTest(Selftask task) {
+        assertNull(taskManager.add(task));
     }
 
-    @Test
-    void addAndGetEpic() {
-        Task task;
-        int id;
-        for (var epicTask : epicTasks) {
-            task = taskManager.add(epicTask);
-            id = task.getId();
-            assertInstanceOf(Epictask.class, task);
-            assertSame(task.getType(), Type.EPIC);
-            assertEquals(task.getName(), epicTask.getName());
-            assertEquals(task.getDescription(), epicTask.getDescription());
+    @DisplayName("add null Epictask")
+    @Tag("add")
+    @ParameterizedTest
+    @NullSource
+    void addNullEpicTaskTest(Epictask task) {
+        assertNull(taskManager.add(task));
+    }
 
-            task = taskManager.get(id);
-            assertEquals(id, task.getId());
-            assertInstanceOf(Epictask.class, task);
-            assertSame(task.getType(), Type.EPIC);
-            assertEquals(task.getName(), epicTask.getName());
-            assertEquals(task.getDescription(), epicTask.getDescription());
+    @DisplayName("add null Subtask")
+    @Tag("add")
+    @ParameterizedTest
+    @NullSource
+    void addNullSubTaskTest(Subtask task) {
+        assertNull(taskManager.add(task));
+    }
+
+    @DisplayName("add alone tasks and check that we get correct back from TaskManager")
+    @Tag("add")
+    @Test
+    void getAllSelfTaskTest() {
+        HashSet<Task> set = new HashSet<>();
+        List<Selftask> taskList = List.of(
+                new Selftask("сходить за продуктами", "купить сыр, молоко, творог"),
+                new Selftask("выгулять собаку", "пойти вечером погулять в парк"),
+                new Selftask("скачать сериал", "Игра престолов"),
+                new Selftask("работать", "работу"),
+                new Selftask("смотреть на закат", "и на рассвет")
+        );
+        for (Selftask task : taskList) {
+            set.add(taskManager.add(task));
         }
+        List<Task> getAllList = taskManager.getAll();
+        assertAll(
+                () -> assertEquals(getAllList.size(), taskList.size()),
+                () -> assertTrue(set.contains(getAllList.get(0))),
+                () -> assertTrue(set.contains(getAllList.get(1))),
+                () -> assertTrue(set.contains(getAllList.get(2))),
+                () -> assertTrue(set.contains(getAllList.get(3))),
+                () -> assertTrue(set.contains(getAllList.get(4)))
+        );
     }
 
-    @Test
-    void getAllEpicTaskTheSamePower() {
-        addAllEpicTasksToManager();
-        List<Task> list = taskManager.getAll();
-        assertEquals(list.size(), epicTasks.size());
+    @DisplayName("add and get epic tasks (without subtasks)")
+    @Tag("add")
+    @ParameterizedTest
+    @MethodSource("getEpicTasks")
+    void addAndGetEpicTest(Epictask task) {
+        Task addedTask = taskManager.add(task);
+        int id = addedTask.getId();
+
+        // проверяем, что метод "add" возвращает корректные таски
+        assertAll(
+                () -> assertInstanceOf(Epictask.class, addedTask),
+                () -> assertSame(Subordination.EPIC, addedTask.getSubordination()),
+                () -> assertEquals(task.getName(), addedTask.getName()),
+                () -> assertEquals(task.getDescription(), addedTask.getDescription())
+        );
+        Task gettedTask = taskManager.get(id);
+
+        // проверяем, что в базе сохранены корректные таски, вызывая каждый по id
+        assertAll(
+                () -> assertEquals(id, gettedTask.getId()),
+                () -> assertInstanceOf(Epictask.class, gettedTask),
+                () -> assertSame(Subordination.EPIC, gettedTask.getSubordination()),
+                () -> assertEquals(task.getName(), gettedTask.getName()),
+                () -> assertEquals(task.getDescription(), gettedTask.getDescription())
+        );
     }
 
+    @DisplayName("add some alone epic tasks and check that we get correct back from TaskManager")
+    @Tag("add")
     @Test
-    void getAllSubsFromEpicFilled() {
-        Epictask epic1 = new Epictask("пойти на рыбалку", "Селигер, в районе оз Волго");
-        epic1 = taskManager.add(epic1);
-        Subtask sub11 = new Subtask("купить удочку", "магазин Охотник, проспект Ленина, 20", epic1.getId());
-        Subtask sub12 = new Subtask("наловить червей", "200 шт.", epic1.getId());
-        Subtask sub13 = new Subtask("купить алкоголь", "батя обещал самогон", epic1.getId());
-        Task task1 = taskManager.add(sub11);
-        Task task2 = taskManager.add(sub12);
-        Task task3 = taskManager.add(sub13);
-        List<Subtask> list = taskManager.getAllSubs(epic1.getId());
-        assertEquals(list.size(), 3);
-        assertTrue(list.contains(task1));
-        assertTrue(list.contains(task2));
-        assertTrue(list.contains(task3));
-    }
-
-    @Test
-    void getAllSubsFromEpicEmpty() {
-        Epictask epic3 = new Epictask("отпуск", "отпуск конец августа");
-        epic3 = taskManager.add(epic3);
-        List<Subtask> list = taskManager.getAllSubs(epic3.getId());
-        assertEquals(list, Collections.emptyList());
-    }
-
-    @Test
-    void getSubTaskFromWholeList() {
-        addAddEpicAndSubsToManager();
-        List<Task> list = taskManager.getAll();
-        int count = 0;
-        for (Task t : list) {
-            if (t.getType() == Type.SUBTASK) count++;
+    void getAllEpicTaskTest() {
+        HashSet<Task> set = new HashSet<>();
+        List<Epictask> taskList = List.of(
+                new Epictask("пойти на рыбалку", "Селигер, в районе оз Волго"),
+                new Epictask("жениться", "родители просят внуков"),
+                new Epictask("отпуск", "отпуск конец августа")
+        );
+        for (Epictask task : taskList) {
+            set.add(taskManager.add(task));
         }
-        assertEquals(count, 7);
+        List<Task> getAllList = taskManager.getAll();
+        assertAll(
+                () -> assertEquals(getAllList.size(), taskList.size()),
+                () -> assertTrue(set.contains(getAllList.get(0))),
+                () -> assertTrue(set.contains(getAllList.get(1))),
+                () -> assertTrue(set.contains(getAllList.get(2)))
+        );
     }
 
+    @DisplayName("return the list of epic subtasks")
+    @Tag("subList")
     @Test
-    void deleteTest() {
-        addAddEpicAndSubsToManager();
-        Selftask task = new Selftask("все проходит", "и это пройдет");
-        task = taskManager.add(task);
+    void getAllSubsFromEpicFilledTest() {
+        Epictask epic = new Epictask("пойти на рыбалку", "Селигер, в районе оз Волго");
+        epic = taskManager.add(epic);
+        Subtask sub1 = new Subtask("купить удочку", "магазин Охотник, проспект Ленина, 20", epic.getId());
+        Subtask sub2 = new Subtask("наловить червей", "200 шт.", epic.getId());
+        Subtask sub3 = new Subtask("купить алкоголь", "батя обещал самогон", epic.getId());
+        Task task1 = taskManager.add(sub1);
+        Task task2 = taskManager.add(sub2);
+        Task task3 = taskManager.add(sub3);
+        List<Subtask> listOfSubs = taskManager.getAllSubs(epic.getId());
+        assertAll(
+                () -> assertEquals(3, listOfSubs.size()),
+                () -> assertTrue(listOfSubs.contains(task1)),
+                () -> assertTrue(listOfSubs.contains(task2)),
+                () -> assertTrue(listOfSubs.contains(task3))
+        );
+    }
+
+    @DisplayName("return the list of epic subtasks if it has not any subtasks")
+    @Tag("subList")
+    @Test
+    void getAllSubsFromEpicEmptyTest() {
+        Epictask epic = new Epictask("отпуск", "отпуск конец августа");
+        epic = taskManager.add(epic);
+        List<Subtask> list = taskManager.getAllSubs(epic.getId());
+        assertEquals(Collections.emptyList(), list);
+    }
+
+    @DisplayName("add epic and subtasks and check the list of all tasks")
+    @Tag("add")
+    @Test
+    void getSubTaskFromWholeListTest() {
+        Epictask epic = taskManager.add(
+                new Epictask("пойти на рыбалку", "Селигер, в районе оз Волго"));
+        Subtask sub1 = taskManager.add(
+                new Subtask("купить удочку", "магазин Охотник, проспект Ленина, 20", epic.getId()));
+        Subtask sub2 = taskManager.add(
+                new Subtask("наловить червей", "200 шт.", epic.getId()));
+        Subtask sub3 = taskManager.add(
+                new Subtask("купить алкоголь", "батя обещал самогон", epic.getId()));
+        List<Task> getAllList = taskManager.getAll();
+        assertAll(
+                () -> assertEquals(4, getAllList.size()),
+                () -> assertTrue(getAllList.contains(epic)),
+                () -> assertTrue(getAllList.contains(sub1)),
+                () -> assertTrue(getAllList.contains(sub2)),
+                () -> assertTrue(getAllList.contains(sub3))
+        );
+    }
+
+    @DisplayName("try to get absent task")
+    @Tag("get")
+    @Test
+    void getNotExistingTaskTest() {
+        taskManager.add(new Selftask("сходить за продуктами", "купить сыр, молоко, творог"));
+        taskManager.add(new Selftask("выгулять собаку", "пойти вечером погулять в парк"));
+        taskManager.add(new Selftask("выгулять собаку", "пойти вечером погулять в парк"));
+        assertAll(
+                () -> assertNull(taskManager.get(600)),
+                () -> assertNull(taskManager.get(null))
+        );
+    }
+
+    @DisplayName("get absent Selftask")
+    @Tag("get")
+    @Test
+    void getNotExistingSelfTaskTest() {
+        taskManager.add(new Selftask("сходить за продуктами", "купить сыр, молоко, творог"));
+        taskManager.add(new Selftask("выгулять собаку", "пойти вечером погулять в парк"));
+        taskManager.add(new Selftask("выгулять собаку", "пойти вечером погулять в парк"));
+        assertAll(
+                () -> assertNull(taskManager.getSelftask(600)),
+                () -> assertNull(taskManager.getSelftask(null))
+        );
+    }
+
+    @DisplayName("get absent Epictask")
+    @Tag("get")
+    @Test
+    void getNotExistingEpicTaskTest() {
+        taskManager.add(new Selftask("сходить за продуктами", "купить сыр, молоко, творог"));
+        taskManager.add(new Selftask("выгулять собаку", "пойти вечером погулять в парк"));
+        taskManager.add(new Selftask("выгулять собаку", "пойти вечером погулять в парк"));
+        assertAll(
+                () -> assertNull(taskManager.getEpic(600)),
+                () -> assertNull(taskManager.getEpic(null))
+        );
+    }
+
+    @DisplayName("get absent Subtask")
+    @Tag("get")
+    @Test
+    void getNotExistingSubTaskTest() {
+        taskManager.add(new Selftask("сходить за продуктами", "купить сыр, молоко, творог"));
+        taskManager.add(new Selftask("выгулять собаку", "пойти вечером погулять в парк"));
+        taskManager.add(new Selftask("выгулять собаку", "пойти вечером погулять в парк"));
+        assertAll(
+                () -> assertNull(taskManager.getSubtask(600)),
+                () -> assertNull(taskManager.getSubtask(null))
+        );
+    }
+
+    @DisplayName("delete Selftask, try to get")
+    @Tag("delete")
+    @Test
+    void deleteSelfTest() {
+        taskManager.add(new Selftask("сходить за продуктами", "купить сыр, молоко, творог"));
+        taskManager.add(new Selftask("выгулять собаку", "пойти вечером погулять в парк"));
+        Selftask task = taskManager.add(new Selftask("все проходит", "и это пройдет"));
         int id = task.getId();
         assertEquals(task, taskManager.get(id));
         taskManager.delete(id);
-        assertNotEquals(task, taskManager.get(id));
+        assertNull(taskManager.get(id));
     }
 
+    @DisplayName("delete Epic, check that epic and subtasks deleted")
+    @Tag("delete")
     @Test
-    void updateTest() {
-        addAllSelfTasksToManager();
-        List<Task> list = taskManager.getAll();
-        Task task = list.get(1);
-        int id = task.getId();
-        Selftask newTask = new Selftask("new", "new");
-        newTask.setId(id);
-        taskManager.update(newTask);
-        Task updated = taskManager.get(id);
-        assertEquals(newTask.getName(), updated.getName());
-        assertEquals(newTask.getDescription(), updated.getDescription());
+    void deleteEpicTest() {
+        Epictask epic = taskManager.add(
+                new Epictask("пойти на рыбалку", "Селигер, в районе оз Волго"));
+        Subtask sub1 = taskManager.add(
+                new Subtask("купить удочку", "магазин Охотник, проспект Ленина, 20", epic.getId()));
+        Subtask sub2 = taskManager.add(
+                new Subtask("наловить червей", "200 шт.", epic.getId()));
+        Subtask sub3 = taskManager.add(
+                new Subtask("купить алкоголь", "батя обещал самогон", epic.getId()));
+        taskManager.delete(epic.getId());
+        assertNull(taskManager.get(epic.getId()));
+        assertNull(taskManager.get(sub1.getId()));
+        assertNull(taskManager.get(sub2.getId()));
+        assertNull(taskManager.get(sub3.getId()));
     }
 
+    @DisplayName("delete subtask, check that only subtask deleted")
+    @Tag("delete")
     @Test
-    void History() {
-        addAllSelfTasksToManager();
-        addAddEpicAndSubsToManager();
-        List<Task> list = taskManager.getAll();
-        taskManager.get(list.get(0).getId());
-        taskManager.get(list.get(1).getId());
-        taskManager.get(list.get(4).getId());
-        taskManager.get(list.get(7).getId());
-        taskManager.get(list.get(7).getId());
-        var task10 = taskManager.get(list.get(14).getId());
-        var task9 = taskManager.get(list.get(6).getId());
-        var task8 = taskManager.get(list.get(13).getId());
-        var task7 = taskManager.get(list.get(1).getId());
-        var task6 = taskManager.get(list.get(4).getId());
-        var task5 = taskManager.get(list.get(7).getId());
-        var task4 = taskManager.get(list.get(7).getId());
-        var task3 = taskManager.get(list.get(14).getId());
-        var task2 = taskManager.get(list.get(6).getId());
-        var task1 = taskManager.get(list.get(13).getId());
-        List<Task> history = taskManager.getHistory();
-        Task[] arr1 = {history.get(0), history.get(1), history.get(2), history.get(3), history.get(4), history.get(5),
-                history.get(6), history.get(7), history.get(8), history.get(9)};
-        Task[] arr2 = {task1, task2, task3, task4, task5, task6, task7, task8, task9, task10};
-        assertArrayEquals(arr1, arr2);
+    void deleteSubTest() {
+        Epictask epic = taskManager.add(
+                new Epictask("пойти на рыбалку", "Селигер, в районе оз Волго"));
+        Subtask sub1 = taskManager.add(
+                new Subtask("купить удочку", "магазин Охотник, проспект Ленина, 20", epic.getId()));
+        Subtask sub2 = taskManager.add(
+                new Subtask("наловить червей", "200 шт.", epic.getId()));
+        Subtask sub3 = taskManager.add(
+                new Subtask("купить алкоголь", "батя обещал самогон", epic.getId()));
+        taskManager.delete(sub1.getId());
+        assertAll(
+                () -> assertEquals(epic, taskManager.getEpic(epic.getId())),
+                () -> assertNull(taskManager.get(sub1.getId())),
+                () -> assertEquals(sub2, taskManager.getSubtask(sub2.getId())),
+                () -> assertEquals(sub3, taskManager.getSubtask(sub3.getId()))
+        );
+        taskManager.delete(sub2.getId());
+        assertAll(
+                () -> assertEquals(epic, taskManager.getEpic(epic.getId())),
+                () -> assertNull(taskManager.get(sub1.getId())),
+                () -> assertNull(taskManager.get(sub2.getId())),
+                () -> assertEquals(sub3, taskManager.getSubtask(sub3.getId()))
+        );
+        taskManager.delete(sub3.getId());
+        assertAll(
+                () -> assertEquals(epic, taskManager.getEpic(epic.getId())),
+                () -> assertNull(taskManager.get(sub1.getId())),
+                () -> assertNull(taskManager.get(sub2.getId())),
+                () -> assertNull(taskManager.get(sub3.getId()))
+        );
+
     }
 
+    @DisplayName("clear all tasks")
+    @Tag("clear")
     @Test
-    void Clear() {
-        addAllSelfTasksToManager();
-        addAddEpicAndSubsToManager();
-        int size = taskManager.getAll().size();
+    void clearTest() {
+        taskManager.add(new Selftask("сходить за продуктами", "купить сыр, молоко, творог"));
+        taskManager.add(new Selftask("выгулять собаку", "пойти вечером погулять в парк"));
+        taskManager.add(new Selftask("все проходит", "и это пройдет"));
+        assertEquals(3, taskManager.getAll().size());
         taskManager.clear();
-        int empty = taskManager.getAll().size();
-        assertTrue(size > 0);
-        assertEquals(empty, 0);
+        assertEquals(0, taskManager.getAll().size());
     }
 
-    @Test
-    void EpicStatus() {
-        addAllSelfTasksToManager();
-        Epictask epic1 = new Epictask("пойти на рыбалку", "Селигер, в районе оз Волго");
-        epic1 = taskManager.add(epic1);
-        int epic1Id = epic1.getId();
-        Subtask sub11 = new Subtask("купить удочку", "магазин Охотник, проспект Ленина, 20", epic1Id);
-        Subtask sub12 = new Subtask("наловить червей", "200 шт.", epic1Id);
-        Subtask sub13 = new Subtask("купить алкоголь", "батя обещал самогон", epic1Id);
-        Task task1 = taskManager.add(sub11);
-        Task task2 = taskManager.add(sub12);
-        Task task3 = taskManager.add(sub13);
-        assertEquals(epic1.getStatus(), Status.NEW);
-
-        task1.setStatus(Status.DONE);
-        taskManager.update(task1);
-        assertEquals(taskManager.get(epic1Id).getStatus(), Status.IN_PROGRESS);
-
-        task2.setStatus(Status.DONE);
-        taskManager.update(task2);
-        assertEquals(taskManager.get(epic1Id).getStatus(), Status.IN_PROGRESS);
-
-        task3.setStatus(Status.DONE);
-        taskManager.update(task3);
-        assertEquals(taskManager.get(epic1Id).getStatus(), Status.DONE);
-
-        task3.setStatus(Status.IN_PROGRESS);
-        taskManager.update(task3);
-        assertEquals(taskManager.get(epic1Id).getStatus(), Status.IN_PROGRESS);
-
-        taskManager.delete(task1.getId());
-        taskManager.delete(task2.getId());
-        taskManager.delete(task3.getId());
-        assertEquals(taskManager.get(epic1Id).getStatus(), Status.NEW);
-    }
-
-    @Test
-    void deleteEpic() {
-        Epictask epic1 = new Epictask("пойти на рыбалку", "Селигер, в районе оз Волго");
-        epic1 = taskManager.add(epic1);
-        int epic1Id = epic1.getId();
-        Subtask sub11 = new Subtask("купить удочку", "магазин Охотник, проспект Ленина, 20", epic1Id);
-        Subtask sub12 = new Subtask("наловить червей", "200 шт.", epic1Id);
-        Subtask sub13 = new Subtask("купить алкоголь", "батя обещал самогон", epic1Id);
-        Task task1 = taskManager.add(sub11);
-        Task task2 = taskManager.add(sub12);
-        Task task3 = taskManager.add(sub13);
-        taskManager.delete(epic1Id);
-        assertNull(taskManager.get(epic1Id));
-        assertNull(taskManager.get(task1.getId()));
-        assertNull(taskManager.get(task2.getId()));
-        assertNull(taskManager.get(task3.getId()));
-    }
-
-    @Test
-    void deleteSelf() {
-        addAllSelfTasksToManager();
-        List<Task> list = taskManager.getAll();
-        for (Task task : list) {
-            taskManager.delete(task.getId());
-            assertNull(taskManager.get(task.getId()));
-        }
-    }
-
-    @DisplayName("равенство SelfTask с одинаковыми id")
-    @Test
-    void checkIfEqualSelfTasks() {
-        Task selfTask1 = new Selftask("ss", "ffff");
-        selfTask1.setId(555);
-        Task selfTask2 = new Selftask("arsgfs", "cdb gfv");
-        selfTask2.setId(555);
-        assertEquals(selfTask1, selfTask2);
-    }
-
-    @DisplayName("равенство EpicTask с одинаковыми id")
-    @Test
-    void checkIfEqualEpicTasks() {
-        Epictask epicTask1 = new Epictask("ss", "ffff");
-        epicTask1.setId(555);
-        Epictask epicTask2 = new Epictask("arsgfs", "cdb gfv");
-        epicTask2.setId(555);
-        assertEquals(epicTask1, epicTask2);
-    }
-
-    @DisplayName("равенство SubTask с одинаковыми id")
-    @Test
-    void checkIfEqualSubTasks() {
-        Subtask subTask1 = new Subtask("ss", "ffff", 1);
-        subTask1.setId(555);
-        Subtask subTask2 = new Subtask("arsgfs", "cdb gfv", 3);
-        subTask2.setId(555);
-        assertEquals(subTask1, subTask2);
-    }
-
-    @DisplayName("одиночная задача не может быть эпиком при добавлении подзадачи")
-    @Test
-    void SelfCanNotBeEpic() {
-        Selftask self = new Selftask("sss", "sss");
-        self = taskManager.add(self);
-        int selfId = self.getId();
-        Subtask subTask = new Subtask("ss", "ffff", selfId);
-        assertNull(taskManager.add(subTask));
-    }
-
-    @DisplayName("подзадача не может быть эпиком при добавлении подзадачи")
-    @Test
-    void SubCanNotBeEpic() {
-        Epictask epic = new Epictask("ss", "ffff");
-        epic = taskManager.add(epic);
-        Subtask sub1 = new Subtask("sss", "sss", epic.getId());
-        sub1 = taskManager.add(sub1);
-        Subtask sub2 = new Subtask("sss", "sss", sub1.getId());
-        assertNull(taskManager.add(sub2));
-    }
-
-    @DisplayName("проверка, что id присваивается в менеджере, а не передается с задачей для SelfTask")
-    @Test
-    void isIdGetFromManagerForSelfTask() {
-        int fakeId = -1_000_000;
-        Selftask self = new Selftask("sss", "sss");
-        self.setId(fakeId);
-        self = taskManager.add(self);
-        assertNotEquals(fakeId, self.getId());
-    }
-
-    @DisplayName("проверка, что id присваивается в менеджере, а не передается с задачей для EpicTask")
-    @Test
-    void isIdGetFromManagerForEpicTask() {
-        int fakeId = -1_000_000;
-        Epictask task = new Epictask("sss", "sss");
-        task.setId(fakeId);
-        task = taskManager.add(task);
-        assertNotEquals(fakeId, task.getId());
-    }
-
-    @DisplayName("проверка, что id присваивается в менеджере, а не передается с задачей для SubTask")
-    @Test
-    void isIdGetFromManagerForSubTask() {
-        int fakeId = -1_000_000;
-        Epictask epic = new Epictask("sss", "sss");
-        epic = taskManager.add(epic);
-        Subtask sub = new Subtask("sss", "sss", epic.getId());
-        sub.setId(fakeId);
-        sub = taskManager.add(sub);
-        assertNotEquals(fakeId, sub.getId());
-    }
-
+    @DisplayName("update of name, description, status of Selftask")
     @Tag("update")
-    @DisplayName("проверка, что при обновлении меняется имя, описание, статус для Selftask")
     @Test
-    void updateSelfTask() {
+    void updateSelfTaskTest() {
         String oldName = "Иван";
         String newName = "Петр";
         String oldDesc = "Иванов";
@@ -433,9 +392,9 @@ class RegularTaskManagerTest {
     }
 
     @Tag("update")
-    @DisplayName("проверка, что при обновлении меняется имя, описание, статус для EpicTask")
+    @DisplayName("update of name, description, status of EpicTask")
     @Test
-    void updateEpicTask() {
+    void updateEpicTaskTest() {
         String oldName = "Иван";
         String newName = "Петр";
         String oldDesc = "Иванов";
@@ -459,9 +418,9 @@ class RegularTaskManagerTest {
     }
 
     @Tag("update")
-    @DisplayName("проверка, что при обновлении меняется имя, описание, статус для SubTask")
+    @DisplayName("update of name, description, status of  SubTask")
     @Test
-    void updateSubTask() {
+    void updateSubTaskTest() {
         String oldName = "Иван";
         String newName = "Петр";
         String oldDesc = "Иванов";
@@ -488,5 +447,174 @@ class RegularTaskManagerTest {
             assertEquals(updatedTask.getDescription(), newDesc);
             assertEquals(updatedTask.getStatus(), newStatus);
         });
+    }
+
+    @DisplayName("equality SelfTasks with equal id")
+    @Tag("equality")
+    @Test
+    void checkIfEqualSelfTasksTest() {
+        Task selfTask1 = new Selftask("ss", "ffff");
+        selfTask1.setId(555);
+        Task selfTask2 = new Selftask("arsgfs", "cdb gfv");
+        selfTask2.setId(555);
+        assertEquals(selfTask1, selfTask2);
+    }
+
+    @DisplayName("equality of EpicTask with equal id")
+    @Tag("equality")
+    @Test
+    void checkIfEqualEpicTasksTest() {
+        Epictask epicTask1 = new Epictask("ss", "ffff");
+        epicTask1.setId(555);
+        Epictask epicTask2 = new Epictask("arsgfs", "cdb gfv");
+        epicTask2.setId(555);
+        assertEquals(epicTask1, epicTask2);
+    }
+
+    @DisplayName("equality SubTask with equal id")
+    @Tag("equality")
+    @Test
+    void checkIfEqualSubTasksTest() {
+        Subtask subTask1 = new Subtask("ss", "ffff", 1);
+        subTask1.setId(555);
+        Subtask subTask2 = new Subtask("arsgfs", "cdb gfv", 3);
+        subTask2.setId(555);
+        assertEquals(subTask1, subTask2);
+    }
+
+    @DisplayName("Selftask can not be Epic")
+    @Tag("equality")
+    @Test
+    void selfCanNotBeEpicTest() {
+        Selftask self = new Selftask("sss", "sss");
+        self = taskManager.add(self);
+        int selfId = self.getId();
+        Subtask subTask = new Subtask("ss", "ffff", selfId);
+        assertNull(taskManager.add(subTask));
+    }
+
+    @DisplayName("Subtask can not be Epic")
+    @Tag("SubEpic")
+    @Test
+    void subCanNotBeEpicTest() {
+        Epictask epic = new Epictask("ss", "ffff");
+        epic = taskManager.add(epic);
+        Subtask sub1 = new Subtask("sss", "sss", epic.getId());
+        sub1 = taskManager.add(sub1);
+        Subtask sub2 = new Subtask("sss", "sss", sub1.getId());
+        assertNull(taskManager.add(sub2));
+    }
+
+    @DisplayName("id of SelfTask is assigned in TaskManager, not come from user")
+    @Tag("SubEpic")
+    @Test
+    void isIdGetFromManagerForSelfTaskTest() {
+        int fakeId = -1_000_000;
+        Selftask self = new Selftask("sss", "sss");
+        self.setId(fakeId);
+        self = taskManager.add(self);
+        assertNotEquals(fakeId, self.getId());
+    }
+
+    @DisplayName("id of EoicTask is assigned in TaskManager, not come from user")
+    @Tag("id")
+    @Test
+    void isIdGetFromManagerForEpicTaskTest() {
+        int fakeId = -1_000_000;
+        Epictask task = new Epictask("sss", "sss");
+        task.setId(fakeId);
+        task = taskManager.add(task);
+        assertNotEquals(fakeId, task.getId());
+    }
+
+    @DisplayName("id of SubTask is assigned in TaskManager, not come from user")
+    @Tag("id")
+    @Test
+    void isIdGetFromManagerForSubTaskTest() {
+        int fakeId = -1_000_000;
+        Epictask epic = new Epictask("sss", "sss");
+        epic = taskManager.add(epic);
+        Subtask sub = new Subtask("sss", "sss", epic.getId());
+        sub.setId(fakeId);
+        sub = taskManager.add(sub);
+        assertNotEquals(fakeId, sub.getId());
+    }
+
+    @DisplayName("status of Epic change when we change status of Subtasks")
+    @Tag("SUbEpic")
+    @Test
+    void epicStatusTest() {
+        Epictask epic = taskManager.add(new Epictask("пойти на рыбалку", "Селигер, в районе оз Волго"));
+        Subtask sub1 = taskManager.add(
+                new Subtask("купить удочку", "магазин Охотник, проспект Ленина, 20", epic.getId()));
+        Subtask sub2 = taskManager.add(
+                new Subtask("наловить червей", "200 шт.", epic.getId()));
+        Subtask sub3 = taskManager.add(
+                new Subtask("купить алкоголь", "батя обещал самогон", epic.getId()));
+        int epicId = epic.getId();
+        assertEquals(Status.NEW, epic.getStatus());
+
+        sub1.setStatus(Status.DONE);
+        taskManager.update(sub1);
+        assertEquals(Status.IN_PROGRESS, taskManager.get(epicId).getStatus());
+
+        sub2.setStatus(Status.DONE);
+        taskManager.update(sub2);
+        assertEquals(Status.IN_PROGRESS, taskManager.get(epicId).getStatus());
+
+        sub3.setStatus(Status.DONE);
+        taskManager.update(sub3);
+        assertEquals(Status.DONE, taskManager.get(epicId).getStatus());
+
+        sub3.setStatus(Status.IN_PROGRESS);
+        taskManager.update(sub3);
+        assertEquals(Status.IN_PROGRESS, taskManager.get(epicId).getStatus());
+
+        taskManager.delete(sub1.getId());
+        taskManager.delete(sub2.getId());
+        taskManager.delete(sub3.getId());
+        assertEquals(taskManager.get(epicId).getStatus(), Status.NEW);
+    }
+
+    @DisplayName("history is not changed when we add, remove and update tasks")
+    @Tag("history")
+    @Test
+    void historyNotUpdatedTest() {
+        Epictask epic = taskManager.add(
+                new Epictask("пойти на рыбалку", "Селигер, в районе оз Волго"));
+        taskManager.add(
+                new Subtask("купить удочку", "магазин Охотник, проспект Ленина, 20", epic.getId()));
+        Subtask sub2 = taskManager.add(new Subtask("наловить червей", "200 шт.", epic.getId()));
+        taskManager.add(new Subtask("купить алкоголь", "батя обещал самогон", epic.getId()));
+        Selftask self1 = taskManager.add(
+                new Selftask("сходить за продуктами", "купить сыр, молоко, творог"));
+        taskManager.add(new Selftask("выгулять собаку", "пойти вечером погулять в парк"));
+        Selftask self3 = taskManager.add(new Selftask("скачать сериал", "Игра престолов"));
+        assertTrue(taskManager.getHistory().isEmpty());
+
+        taskManager.delete(self3.getId());
+        taskManager.delete(sub2.getId());
+        taskManager.delete(epic.getId());
+        assertTrue(taskManager.getHistory().isEmpty());
+
+        Selftask newTask = new Selftask("bla", "bla");
+        newTask.setId(self1.getId());
+        taskManager.update(newTask);
+        assertTrue(taskManager.getHistory().isEmpty());
+    }
+
+    @DisplayName("history update when we get Task")
+    @Tag("history")
+    @Test
+    void historyUpdatedTest() {
+        Selftask self1 = taskManager.add(
+                new Selftask("сходить за продуктами", "купить сыр, молоко, творог"));
+        Selftask self2 = taskManager.add(
+                new Selftask("выгулять собаку", "пойти вечером погулять в парк"));
+        taskManager.add(new Selftask("скачать сериал", "Игра престолов"));
+        taskManager.get(self1.getId());
+        taskManager.get(self2.getId());
+        Task[] correctList = {self2, self1};
+        assertArrayEquals(correctList, taskManager.getHistory().toArray());
     }
 }
